# gen-pdf

./: Cargo.toml  README.md  payment-plan-1.json  test-gpt.json  test-real.json  test.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json  test9.json
src/: main.rs
