[package]
name = "pdf-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genpdf = { version = "0.2.0", features = ["images"]}
regex = "1.10.3"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

